<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Button_Close"
        android:id="@+id/p2_button_close"
        android:onClick="on_p2_button_CloseClick"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Button_Test"
        android:id="@+id/p2_buttonTest"
        android:onClick="on_p2_buttonTestClick"
        android:enabled="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Button_Disc"
        android:id="@+id/p2_button_disc"
        android:onClick="on_p2_buttonDiconcClick"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/p2_button_close" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ServicesList"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/p2_button_close" />
</RelativeLayout>
