<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.serverpit.wolf.controller.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Button_Scan"
        android:id="@+id/button_scan"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="OnButton_Scan_Click" />

    <ListView
        android:id="@+id/DevicesList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_scan"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="57dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Button_Stop"
        android:id="@+id/button_stop"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/button_scan"
        android:onClick="OnButton_Stop_Click" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Button_Clear"
        android:id="@+id/button"
        android:layout_below="@+id/DevicesList"
        android:layout_toEndOf="@+id/button_stop"
        android:onClick="OnButton_Clear_Click" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button"
        android:layout_marginBottom="17dp"
        android:layout_toEndOf="@+id/button"
        android:text="TextView" />
</RelativeLayout>
